--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.main-bg{
+  height: 300px;
+  background-image: url('./img/미니언즈.png');
+  background-size: cover ;
+  background-position:  center;
+}
